css/main.css
body{
    background-color: #eceef1;
    position: relative;
    font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.fixed a{
    width: 146px;
    border-radius: 5px;
    height: 40px;
    background-color: #6B6C72;
    color: white;
    position: fixed;
    right: 11%;
    bottom: 0px;
    text-align: center;
    line-height: 2.5;
}
nav{
    display: flex;
    float: right;
}
li{
    list-style-type: none;
    font-size: 12px;
    line-height: 1.5;
    text-align: left;
    color: #505050;
}
a{
    text-decoration: none;
}

/*
==========================================
FORM SECTION
==========================================
*/
.logo {
    margin-left: 30%;
}
.partners-logo {
    position: relative;
    width: 76%;
    height: 40px;
    left: 9%;
    font-size: 18px;
}

.partners-logo a {
    font-size: 20px;
    padding-right: 2px;
    color: #505050;
}
.partners-logo img {
    margin-top: 8px;
}
h1, p {
    text-align: center;
    font-weight: 100;
}

.form-section {
    height: 700px;
    width: 400px;
    margin-left: 33%;
    position: relative;
    top: 70px;
}
form {
    margin-bottom: 22px;
    font-size: 14px;
    color: #505050;
    position: relative;
}
form img{
    margin-bottom: -5px;
}
.signup-form input {
    display: block;
    height: 30px;
    width: 80%;
}
section .form-footer {
    font-size: 12px;
}
section p {
    margin: 0px 8% 30px 8%;
}

.btn {
    border: 1px solid #0077C5;
    border-radius: 4px;
    background-color: #2c72c6;
    color: white;
    font-size: 20px;
    width: 82%;
    height: 34px;
    margin-left: 7%;
    margin-top: 20px;
}
.signup-form input {
    border: 1px solid #C1C5C8;
}
.signup-form input, .signup-form label {
    margin: 10px 10px;
    margin-left: 7%;
    color: #404040;
    font-size: 16px;

}
.phone-hint {
    margin-left: 30px;
    margin-left: 30px;
    text-align: left;
    font-size: 12px;
}
.form-footer {
    background-color: #eceef1;
    text-align: center;
    padding: 20px;
}
.terms-para {
    font-size: 14px;
    line-height: 1.5;
    margin: 0px 15% 30px 15%;
}
.form-fields {
    background: white;
    margin-top: 20px;
    color: #505050;
    border: 1px solid #C1C5C8;
}
.logos{
    width: 22px;
    height: 22px;
}
footer{
    margin-top: 100px;
    text-align: center;
}
footer a{
    color: #505050;
    margin-left :15px;
}

footer ul{
    margin-left: 39%;
    display: flex;
    width: 15%;
    text-align: center;
    
}
footer p{
    font-size: 12px;
    color: #505050;
}
.signin_button{
    color: white;
    margin-top: 15px;
    margin-left: 10px;
    background: #2c72c6;
    border-radius: 4px;
    height: 36px;
    width: 86px;
    border: 1px solid #4c4c4c;
}
.signin_button img {
    margin-bottom: -7px;
}
.input_lock{
    position: absolute;
    bottom: 74px;
    right: 50px;
}

